# shindensen

./: .gitignore  Cargo.toml  README.md  insomnia_collection.json
.agent/: instructions.md
.agent/workflows/: migration.md
migrations/: 20260212133506_initial_schema.sql  20260215000000_chat_refactor.sql  20260219000000_add_attachments.sql  20260219000001_refactor_files.sql  20260219000002_rename_chat_type_column.sql  20260219000003_add_user_profile_fields.sql
src/: errors.rs  handlers.rs  main.rs  models.rs
