[package]
name = "shindensen"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1.38", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"
dashmap = "6.0"
dotenvy = "0.15"
tower = "0.4"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
